--- a/sass/partials/_skill.scss
+++ b/sass/partials/_skill.scss
@@ -1,19 +1,22 @@
+@use "../abstracts/variables" as var;
+@use "../abstracts/mixins" as mix;
+@use "sass:map";
+
 main .skills .main-skills .skill-list {
   display: grid;
   grid-template-columns: repeat(2, minmax(100px, 1fr));
   gap: 16px;
 
   .card {
-    box-shadow: 0 1px 2px 2px #00000077;
+    @include mix.bounce-shadow;
 
-    &:hover {
-      transform: scale(1.03);
-      box-shadow: 0 4px 6px 6px #00000033;
-    }
+    // &:hover {
+    //   transform: scale(1.03);
+    //   box-shadow: 0 4px 6px 6px #00000033;
+    // }
 
     .card-image {
-      width: 100%;
-      height: 100%;
+      @include mix.full-size;
 
       flex-grow: 1;
       display: flex;
@@ -43,7 +46,7 @@ main .skills .main-skills .skill-list {
 }
 
 /* MD: minimum viewport width 768px or above */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: map.get(var.$breakpoints, "md")) {
   main .skills .main-skills .skill-list {
     gap: 24px;
     grid-template-columns: repeat(3, minmax(100px, 1fr));
@@ -51,7 +54,7 @@ main .skills .main-skills .skill-list {
 }
 
 /* LG: minimum viewport width 992px or above */
-@media screen and (min-width: 992px) {
+@media screen and (min-width: map.get(var.$breakpoints, "lg")) {
   main .skills .main-skills .skill-list {
     gap: 32px;
   }
